--- a/app/views/character/new.html.erb
+++ b/app/views/character/new.html.erb
@@ -1,5 +1,5 @@
 <% content_for :head do %>
-  <%= javascript_import_module_tag  "character" %>
+  <%= javascript_import_module_tag "character" %>
 <% end %>
 
 <style>body {
@@ -7,79 +7,79 @@
 }</style>
 
 <nav>
-  <%= button_to "Назад", character_list_path, method: :get, class:"back_button"%>
+  <%= button_to "Назад", character_list_path, method: :get, class: "back_button" %>
 </nav>
 
-<%= form_for :character do |f| %>
+<%= form_for :character_list_characteristics do |f| %>
   <div class="char-container">
 
     <div class="main-info-container">
-    <p class="char-ability-header">
-      Основная информация:
-    </p>
+      <p class="char-ability-header">
+        Основная информация:
+      </p>
 
       <div class="main-info-left">
         <div>
-    <%= label_tag :character_name, 'Имя персонажа:', class:"input-text-char-main" %>
-    <%= f.text_field :character_name, class:"input-field-char-main" %>
+          <%= label_tag :character_name, 'Имя персонажа:', class: "input-text-char-main" %>
+          <%= f.text_field :character_name, class: "input-field-char-main" %>
         </div>
         <div>
-    <%= label_tag :background, 'Предыстория:', class:"input-text-char-main" %>
-    <%= f.text_field :background, class:"input-field-char-main" %>
+          <%= label_tag :background, 'Предыстория:', class: "input-text-char-main" %>
+          <%= f.text_field :background, class: "input-field-char-main" %>
         </div>
         <div>
-    <%= label_tag :race, 'Раса:', class:"input-text-char-main" %>
-    <%= f.text_field :race, class:"input-field-char-main" %>
+          <%= label_tag :race, 'Раса:', class: "input-text-char-main" %>
+          <%= f.text_field :race, class: "input-field-char-main" %>
         </div>
         <div>
-    <%= label_tag :proficiency_bonus, 'Бонус владения:', class:"input-text-char-main"%>
-    <%= f.number_field :proficiency_bonus, class:"input-field-char-main", id: "30_0",value: "0" %>
+          <%= label_tag :proficiency_bonus, 'Бонус владения:', class: "input-text-char-main" %>
+          <%= f.number_field :proficiency_bonus, class: "input-field-char-main", id: "30_0", value: "0" %>
         </div>
         <div>
-    <%= label_tag :alignment, 'Мировоззрение:', class:"input-text-char-main" %>
-    <%= f.text_field :alignment, class:"input-field-char-main" %>
+          <%= label_tag :alignment, 'Мировоззрение:', class: "input-text-char-main" %>
+          <%= f.text_field :alignment, class: "input-field-char-main" %>
         </div>
         <div>
-    <%= label_tag :exp, 'Опыт:', class:"input-text-char-main" %>
-    <%= f.number_field :exp, class:"input-field-char-main",id: "0_0",value: "0" %>
+          <%= label_tag :exp, 'Опыт:', class: "input-text-char-main" %>
+          <%= f.number_field :exp, class: "input-field-char-main", id: "0_0", value: "0" %>
         </div>
         <div>
-    <%= label_tag :lvl, 'Уровень:', class:"input-text-char-main" %>
-    <%= f.number_field :lvl, class:"input-field-char-main",id: "0_1",value: "1" %>
+          <%= label_tag :lvl, 'Уровень:', class: "input-text-char-main" %>
+          <%= f.number_field :lvl, class: "input-field-char-main", id: "0_1", value: "1" %>
         </div>
         <div>
-    <%= label_tag :inspiration, 'Вдохновение:', class:"input-text-char-main" %>
-    <%= f.check_box :inspiration, class:"checkbox-char checkbox-main" %>
+          <%= label_tag :inspiration, 'Вдохновение:', class: "input-text-char-main" %>
+          <%= f.check_box :inspiration, class: "checkbox-char checkbox-main" %>
         </div>
       </div>
-      <div class ="main-info-right">
+      <div class="main-info-right">
         <div>
-    <%= label_tag :armor_class, 'Класс защиты:', class:"input-text-char-main" %>
-    <%= f.number_field :armor_class, class:"input-field-char-main",id: "0_2",value: "0" %>
+          <%= label_tag :armor_class, 'Класс защиты:', class: "input-text-char-main" %>
+          <%= f.number_field :armor_class, class: "input-field-char-main", id: "0_2", value: "0" %>
         </div>
         <div>
-    <%= label_tag :initiative, 'Инициатива:', class:"input-text-char-main" %>
-    <%= f.number_field :initiative, class:"input-field-char-main",id: "0_3",value: "0" %>
+          <%= label_tag :initiative, 'Инициатива:', class: "input-text-char-main" %>
+          <%= f.number_field :initiative, class: "input-field-char-main", id: "0_3", value: "0" %>
         </div>
         <div>
-    <%= label_tag :speed, 'Скорость:', class:"input-text-char-main" %>
-    <%= f.number_field :speed, class:"input-field-char-main",id: "0_4",value: "15" %>
+          <%= label_tag :speed, 'Скорость:', class: "input-text-char-main" %>
+          <%= f.number_field :speed, class: "input-field-char-main", id: "0_4", value: "15" %>
         </div>
         <div>
-    <%= label_tag :max_hp, 'Максимальный уровень здоровья:', class:"input-text-char-main" %>
-    <%= f.number_field :max_hp, class:"input-field-char-main",id: "0_5",value: "10" %>
+          <%= label_tag :max_hp, 'Максимальный уровень здоровья:', class: "input-text-char-main" %>
+          <%= f.number_field :max_hp, class: "input-field-char-main", id: "0_5", value: "10" %>
         </div>
         <div>
-    <%= label_tag :current_hp, 'Текущий уровень здоровья:', class:"input-text-char-main" %>
-    <%= f.number_field :current_hp, class:"input-field-char-main",id: "0_6",value: "10" %>
+          <%= label_tag :current_hp, 'Текущий уровень здоровья:', class: "input-text-char-main" %>
+          <%= f.number_field :current_hp, class: "input-field-char-main", id: "0_6", value: "10" %>
         </div>
         <div>
-    <%= label_tag :temporary_hp, 'Временный бонус здоровья:', class:"input-text-char-main" %>
-    <%= f.number_field :temporary_hp, class:"input-field-char-main",id: "0_7",value: "0" %>
+          <%= label_tag :temporary_hp, 'Временный бонус здоровья:', class: "input-text-char-main" %>
+          <%= f.number_field :temporary_hp, class: "input-field-char-main", id: "0_7", value: "0" %>
         </div>
         <div>
-    <%= label_tag :money, 'Медные монеты:', class:"input-text-char-main" %>
-    <%= f.number_field :money, class:"input-field-char-main",id: "0_8",value: "50" %>
+          <%= label_tag :money, 'Медные монеты:', class: "input-text-char-main" %>
+          <%= f.number_field :money, class: "input-field-char-main", id: "0_8", value: "50" %>
         </div>
       </div>
     </div>
@@ -90,131 +90,126 @@
         <p class="char-ability-header">
           Перки персонажа:
         </p>
-	
-        <%= label_tag :acrobatics, 'Акробатика:', class:"input-text-char" %>
-        <%= f.number_field :acrobatics, class:"input-field-char",id: "02_1",value: "0" %>
 
-        <%= label_tag :animal_handling, 'Уход за животными:', class:"input-text-char" %>
-        <%= f.number_field :animal_handling, class:"input-field-char",id: "02_2",value: "0" %>
+        <%= label_tag :acrobatics, 'Акробатика:', class: "input-text-char" %>
+        <%= f.number_field :acrobatics, class: "input-field-char", id: "02_1", value: "0" %>
 
-        <%= label_tag :arcana, 'Магия:', class:"input-text-char" %>
-        <%= f.number_field :arcana, class:"input-field-char",id: "02_3",value: "0" %>
+        <%= label_tag :animal_handling, 'Уход за животными:', class: "input-text-char" %>
+        <%= f.number_field :animal_handling, class: "input-field-char", id: "02_2", value: "0" %>
 
-        <%= label_tag :athletics, 'Атлетика:', class:"input-text-char" %>
-        <%= f.number_field :athletics, class:"input-field-char",id: "02_4",value: "0" %>
+        <%= label_tag :arcana, 'Магия:', class: "input-text-char" %>
+        <%= f.number_field :arcana, class: "input-field-char", id: "02_3", value: "0" %>
 
-        <%= label_tag :deception, 'Обман:', class:"input-text-char" %>
-        <%= f.number_field :deception, class:"input-field-char",id: "02_5",value: "0" %>
+        <%= label_tag :athletics, 'Атлетика:', class: "input-text-char" %>
+        <%= f.number_field :athletics, class: "input-field-char", id: "02_4", value: "0" %>
 
-        <%= label_tag :history, 'История:', class:"input-text-char" %>
-        <%= f.number_field :history, class:"input-field-char",id: "02_6",value: "0" %>
+        <%= label_tag :deception, 'Обман:', class: "input-text-char" %>
+        <%= f.number_field :deception, class: "input-field-char", id: "02_5", value: "0" %>
 
-        <%= label_tag :insight, 'Проницательность :', class:"input-text-char" %>
-        <%= f.number_field :insight, class:"input-field-char" ,id: "02_7",value: "0"%>
+        <%= label_tag :history, 'История:', class: "input-text-char" %>
+        <%= f.number_field :history, class: "input-field-char", id: "02_6", value: "0" %>
 
-        <%= label_tag :intimidation, 'Запугивание:', class:"input-text-char" %>
-        <%= f.number_field :intimidation, class:"input-field-char",id: "02_8",value: "0" %>
+        <%= label_tag :insight, 'Проницательность :', class: "input-text-char" %>
+        <%= f.number_field :insight, class: "input-field-char", id: "02_7", value: "0" %>
 
-        <%= label_tag :investigation, 'Анализ:', class:"input-text-char" %>
-        <%= f.number_field :investigation, class:"input-field-char",id: "02_9",value: "0" %>
+        <%= label_tag :intimidation, 'Запугивание:', class: "input-text-char" %>
+        <%= f.number_field :intimidation, class: "input-field-char", id: "02_8", value: "0" %>
 
-        <%= label_tag :medicine, 'Медицина:', class:"input-text-char" %>
-        <%= f.number_field :medicine, class:"input-field-char",id: "02_10",value: "0" %>
+        <%= label_tag :investigation, 'Анализ:', class: "input-text-char" %>
+        <%= f.number_field :investigation, class: "input-field-char", id: "02_9", value: "0" %>
 
-        <%= label_tag :nature, 'Природа:', class:"input-text-char" %>
-        <%= f.number_field :nature, class:"input-field-char",id: "02_11",value: "0" %>
+        <%= label_tag :medicine, 'Медицина:', class: "input-text-char" %>
+        <%= f.number_field :medicine, class: "input-field-char", id: "02_10", value: "0" %>
 
-        <%= label_tag :perception, 'Восприятие:', class:"input-text-char" %>
-        <%= f.number_field :perception, class:"input-field-char",id: "02_12",value: "0" %>
+        <%= label_tag :nature, 'Природа:', class: "input-text-char" %>
+        <%= f.number_field :nature, class: "input-field-char", id: "02_11", value: "0" %>
 
-        <%= label_tag :performance, 'Выступление:', class:"input-text-char" %>
-        <%= f.number_field :performance, class:"input-field-char",id: "02_13",value: "0" %>
+        <%= label_tag :perception, 'Восприятие:', class: "input-text-char" %>
+        <%= f.number_field :perception, class: "input-field-char", id: "02_12", value: "0" %>
 
-        <%= label_tag :persuasion, 'Убеждение:', class:"input-text-char" %>
-        <%= f.number_field :persuasion, class:"input-field-char",id: "02_14" ,value: "0"%>
+        <%= label_tag :performance, 'Выступление:', class: "input-text-char" %>
+        <%= f.number_field :performance, class: "input-field-char", id: "02_13", value: "0" %>
 
-        <%= label_tag :religion, 'Религия:', class:"input-text-char" %>
-        <%= f.number_field :religion, class:"input-field-char",id: "02_15" ,value: "0"%>
+        <%= label_tag :persuasion, 'Убеждение:', class: "input-text-char" %>
+        <%= f.number_field :persuasion, class: "input-field-char", id: "02_14", value: "0" %>
 
-        <%= label_tag :sleight_of_hand, 'Ловкость рук:', class:"input-text-char" %>
-        <%= f.number_field :sleight_of_hand, class:"input-field-char",id: "02_16" ,value: "0"%>
+        <%= label_tag :religion, 'Религия:', class: "input-text-char" %>
+        <%= f.number_field :religion, class: "input-field-char", id: "02_15", value: "0" %>
 
-        <%= label_tag :stealth, 'Скрытность:', class:"input-text-char" %>
-        <%= f.number_field :stealth, class:"input-field-char",id: "02_17" ,value: "0"%>
+        <%= label_tag :sleight_of_hand, 'Ловкость рук:', class: "input-text-char" %>
+        <%= f.number_field :sleight_of_hand, class: "input-field-char", id: "02_16", value: "0" %>
 
-        <%= label_tag :survival, 'Выживание:', class:"input-text-char" %>
-        <%= f.number_field :survival, class:"input-field-char",id: "02_18" ,value: "0"%>
+        <%= label_tag :stealth, 'Скрытность:', class: "input-text-char" %>
+        <%= f.number_field :stealth, class: "input-field-char", id: "02_17", value: "0" %>
+
+        <%= label_tag :survival, 'Выживание:', class: "input-text-char" %>
+        <%= f.number_field :survival, class: "input-field-char", id: "02_18", value: "0" %>
       </div>
 
-    <div style="display: flex;flex-direction: column">
-    <div class="characteristics-container">
-    <p class="char-ability-header">
-      Характеристики персонажа:
-    </p>
+      <div style="display: flex;flex-direction: column">
+        <div class="characteristics-container">
+          <p class="char-ability-header">
+            Характеристики персонажа:
+          </p>
 
-      <div>
-    <%= label_tag :strength, 'Сила:', class:"input-text-char" %>
-    <%= f.number_field :strength, class:"input-field-char-ch",id: "30_1",value: "10" %>
-      </div>
+          <div>
+            <%= label_tag :strength, 'Сила:', class: "input-text-char" %>
+            <%= f.number_field :strength, class: "input-field-char-ch", id: "30_1", value: "10" %>
+          </div>
 
-      <div>
-    <%= label_tag :dexterity, 'Ловкость:', class:"input-text-char" %>
-    <%= f.number_field :dexterity, class:"input-field-char-ch",id: "30_2",value: "10"  %>
+          <div>
+            <%= label_tag :dexterity, 'Ловкость:', class: "input-text-char" %>
+            <%= f.number_field :dexterity, class: "input-field-char-ch", id: "30_2", value: "10" %>
+          </div>
+
+          <div>
+            <%= label_tag :constitution, 'Телосложение:', class: "input-text-char" %>
+            <%= f.number_field :constitution, class: "input-field-char-ch", id: "30_3", value: "10" %>
+          </div>
+
+          <div>
+            <%= label_tag :intelligence, 'Интелект:', class: "input-text-char" %>
+            <%= f.number_field :intelligence, class: "input-field-char-ch", id: "30_4", value: "10" %>
+          </div>
+
+          <div>
+            <%= label_tag :wisdom, 'Мудрость:', class: "input-text-char" %>
+            <%= f.number_field :wisdom, class: "input-field-char-ch", id: "30_5", value: "10" %>
+          </div>
+
+          <div>
+            <%= label_tag :charisma, 'Харизма:', class: "input-text-char" %>
+            <%= f.number_field :charisma, class: "input-field-char-ch", id: "30_6", value: "10" %>
+          </div>
         </div>
 
-      <div>
-    <%= label_tag :constitution, 'Телосложение:', class:"input-text-char" %>
-    <%= f.number_field :constitution, class:"input-field-char-ch",id: "30_3",value: "10"  %>
-      </div>
+        <div class="saving-throws-container">
+          <p class="char-ability-header">
+            Спасброски:
+          </p>
 
-      <div>
-    <%= label_tag :intelligence, 'Интелект:', class:"input-text-char" %>
-    <%= f.number_field :intelligence, class:"input-field-char-ch",id: "30_4",value: "10"  %>
-      </div>
+          <%= label_tag :strength_throws, 'Сила:', class: "input-text-char-st" %>
+          <%= f.check_box :strength_throws, class: "checkbox-char" %>
 
-      <div>
-    <%= label_tag :wisdom, 'Мудрость:', class:"input-text-char" %>
-    <%= f.number_field :wisdom, class:"input-field-char-ch",id: "30_5",value: "10"  %>
-      </div>
+          <%= label_tag :dexterity_throws, 'Ловкость:', class: "input-text-char-st" %>
+          <%= f.check_box :dexterity_throws, class: "checkbox-char" %>
 
-      <div>
-    <%= label_tag :charisma, 'Харизма:', class:"input-text-char" %>
-    <%= f.number_field :charisma, class:"input-field-char-ch",id: "30_6",value: "10"  %>
+          <%= label_tag :constitution_throws, 'Телосложение:', class: "input-text-char-st" %>
+          <%= f.check_box :constitution_throws, class: "checkbox-char" %>
+
+          <%= label_tag :intelligence_throws, 'Интелект:', class: "input-text-char-st" %>
+          <%= f.check_box :intelligence_throws, class: "checkbox-char" %>
+
+          <%= label_tag :wisdom_throws, 'Мудрость:', class: "input-text-char-st" %>
+          <%= f.check_box :wisdom_throws, class: "checkbox-char" %>
+
+          <%= label_tag :charisma_throws, 'Харизма:', class: "input-text-char-st" %>
+          <%= f.check_box :charisma_throws, class: "checkbox-char" %>
+        </div>
+
+        <%= f.submit 'Создать', class: "char-button" %>
       </div>
     </div>
-
-    <div class="saving-throws-container">
-    <p class="char-ability-header">
-      Спасброски:
-    </p>
-
-    <%= label_tag :strength_throws, 'Сила:', class:"input-text-char-st" %>
-    <%= f.check_box :strength_throws, class:"checkbox-char" %>
-
-    <%= label_tag :dexterity_throws, 'Ловкость:', class:"input-text-char-st" %>
-    <%= f.check_box :dexterity_throws, class:"checkbox-char" %>
-
-    <%= label_tag :constitution_throws, 'Телосложение:', class:"input-text-char-st" %>
-    <%= f.check_box :constitution_throws, class:"checkbox-char" %>
-
-    <%= label_tag :intelligence_throws, 'Интелект:', class:"input-text-char-st" %>
-    <%= f.check_box :intelligence_throws, class:"checkbox-char" %>
-
-    <%= label_tag :wisdom_throws, 'Мудрость:', class:"input-text-char-st" %>
-    <%= f.check_box :wisdom_throws, class:"checkbox-char" %>
-
-    <%= label_tag :charisma_throws, 'Харизма:', class:"input-text-char-st" %>
-    <%= f.check_box :charisma_throws, class:"checkbox-char" %>
-    </div>
-
-      <%= f.submit 'Создать', class:"char-button" %>
-    </div>
-    </div>
-
-
-
-
-
 
 
   </div>
