--- a/app/views/room/show.html.erb
+++ b/app/views/room/show.html.erb
@@ -1,28 +1,26 @@
 <% content_for :head do %>
-  <%= javascript_include_tag "show.js", "data-turbolinks-track" => true  %>
+  <%= javascript_import_module_tag  "show" %>
 <% end %>
 <div>
   <nav>
-    <%= button_to "Назад", root_path, method: :get, class:"back_button"%>
+    <%= button_to "Назад", root_path, method: :get, class: "back_button" %>
   </nav>
 
   <p>Код подключения: <%= @room_tag %></p>
-  <input type="hidden" id="player_id" value="<%= @current_user.id %>" >
-  <div id='chat-box'>
+  <input type="hidden" id="player_id" value="<%= @current_user.id %>">
 
-<div class="chat-container">
-  <div id='chat-box' class="chat-box">
-    <%@messages.each do |message| message  %>
-        <%= render "#{message.direction(@current_user.id)}", message: message%>
-    <% end %>
-  </div>
-  <%= form_with id:'message-form' do |f| %>
-    <div>
-      <%= label_tag :body, 'текст' %>
-      <%= f.text_field :body, id: 'message_body', class:"message-input" %>
+    <div class="chat-container">
+      <div id='chat-box' class="chat-box">
+        <% @messages.each do |message|
+          message %>
+          <%= render "#{message.direction(@current_user.id)}", message: message %>
+        <% end %>
+      </div>
+      <%= form_with id: 'message-form' do |f| %>
+        <%= f.text_area :body,id: :message_body, class:"message-input" %>
+        <div style="text-align: center">
+          <%= f.submit 'Отправить', class:'submit-button'  %>
+        </div>
+      <% end %>
     </div>
-    <div style="text-align: center">
-      <%= f.submit 'Отправить', class:'submit-button'  %>
-    </div>
-  <% end %>
 </div>
